# philcom

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  config.rs  editor.rs  highlight.rs  main.rs  panel.rs  theme.rs  ui.rs
